Add COOP header for Google OAuth support

--- a/netlify.toml
+++ b/netlify.toml
@@ -19,3 +19,8 @@
   from = "/*"
   to = "/index.html"
   status = 200
+
+[[headers]]
+  for = "/*"
+  [headers.values]
+    Cross-Origin-Opener-Policy = "same-origin-allow-popups"
