--- a/netlify.toml
+++ b/netlify.toml
@@ -12,7 +12,7 @@
 
 [[redirects]]
   from = "/api/*"
-  to = "/.netlify/functions/main/:splat"
+  to = "/.netlify/functions/api/:splat"
   status = 200
 
 [[redirects]]
