Update redirect to pass path directly to Mangum

--- a/netlify.toml
+++ b/netlify.toml
@@ -11,7 +11,7 @@
 
 [[redirects]]
   from = "/api/*"
-  to = "/.netlify/functions/v1/:splat"
+  to = "/.netlify/functions/v1"
   status = 200
 
 [[redirects]]
