--- a/netlify.toml
+++ b/netlify.toml
@@ -16,7 +16,7 @@
 
 [[redirects]]
   from = "/api/*"
-  to = "/.netlify/functions/v1/:splat"
+  to = "/.netlify/functions/v1"
   status = 200
 
 [[redirects]]
