--- a/netlify.toml
+++ b/netlify.toml
@@ -10,20 +10,8 @@
 [functions]
   directory = "netlify/functions"
 
-[[redirects]]
-  from = "/api/ping"
-  to = "/.netlify/functions/ping"
-  status = 200
 
-[[redirects]]
-  from = "/api/*"
-  to = "/.netlify/functions/v1"
-  status = 200
-
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
+# Redirects are handled by testaurant_ui/public/_redirects
 
 [[headers]]
   for = "/*"
