--- a/testaurant_ui/netlify.toml
+++ b/testaurant_ui/netlify.toml
@@ -1,6 +1,6 @@
 [build]
-  command = "cd testaurant_ui && npm install && npm run build"
-  publish = "testaurant_ui/dist"
+  command = "npm install && npm run build"
+  publish = "dist"
 
 [build.environment]
   NODE_VERSION = "20"
@@ -8,7 +8,7 @@
   SECRETS_SCAN_OMIT_KEYS = "PORT,HOST,MONGODB_DB_NAME,JWT_ALGORITHM,JWT_EXPIRATION_MINUTES,ALLOWED_ORIGINS,GOOGLE_CLIENT_ID,VITE_GOOGLE_CLIENT_ID"
 
 [functions]
-  directory = "testaurant_ui/functions"
+  directory = "functions"
 
 
 # Redirects are handled by testaurant_ui/public/_redirects
