--- a/testaurant_ui/.env.example
+++ b/testaurant_ui/.env.example
@@ -1,2 +1,3 @@
-VITE_GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
-VITE_API_BASE_URL=http://localhost:8080
+VITE_GOOGLE_CLIENT_ID=your-google-client-id-here
+# For local dev against Render backend, you can leave this empty (uses /api proxy)
+# VITE_API_BASE_URL=https://testaurant-be.onrender.com/testaurant/v1
