--- a/testaurant_ui/.env.example
+++ b/testaurant_ui/.env.example
@@ -1,3 +1,3 @@
-VITE_GOOGLE_CLIENT_ID=your-google-client-id-here
+VITE_GOOGLE_CLIENT_ID=721127109842-artl4573gufjrvfs49a6pvcc3m6rrn0q.apps.googleusercontent.com
 # For local dev against Render backend, you can leave this empty (uses /api proxy)
-# VITE_API_BASE_URL=https://testaurant-be.onrender.com/testaurant/v1
+VITE_API_BASE_URL=http://127.0.0.1:8080
