--- a/netlify.toml
+++ b/netlify.toml
@@ -7,6 +7,22 @@
   PYTHON_VERSION = "3.11"
   SECRETS_SCAN_OMIT_KEYS = "PORT,HOST,MONGODB_DB_NAME,JWT_ALGORITHM,JWT_EXPIRATION_MINUTES,ALLOWED_ORIGINS,GOOGLE_CLIENT_ID,VITE_GOOGLE_CLIENT_ID"
 
+[[redirects]]
+  from = "/api/*"
+  to = "http://51.20.37.236:8080/:splat"
+  status = 200
+  force = true
+
+[[redirects]]
+  from = "/proxy-test"
+  to = "https://www.google.com"
+  status = 301
+  force = true
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
 
 [[headers]]
   for = "/*"
